--- a/0 ListsMaker/lists_maker.ipynb
+++ b/0 ListsMaker/lists_maker.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "AEqQWXj6MTBN"
       },
@@ -39,7 +39,7 @@
       "source": [
         "def random_list(n):\n",
         "  \"\"\"\n",
-        "  Returns a list of n random integers between low and high.\n",
+        "  Returns a list of n random integers from 1 to n.\n",
         "  \"\"\"\n",
         "  return [random.randint(1, n) for _ in range(n)]"
       ]
