--- a/7 ComplexityMachine/ComplexityMachine.ipynb
+++ b/7 ComplexityMachine/ComplexityMachine.ipynb
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -275,8 +275,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [BubbleSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -320,8 +320,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [InsertionSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -365,8 +365,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [SelectionSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -407,8 +407,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [MergeSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -449,8 +449,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [HeapSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -491,8 +491,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [QuickSort]\n",
-        "scenery = [random_list, sorted_list, reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list, sorted_list, reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -534,8 +534,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [BubbleSort, InsertionSort, SelectionSort, MergeSort, HeapSort, QuickSort]\n",
-        "scenery = [sorted_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [sorted_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -577,8 +577,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [InsertionSort, MergeSort, HeapSort]\n",
-        "scenery = [sorted_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [sorted_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -592,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -619,8 +619,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [BubbleSort, InsertionSort, SelectionSort, MergeSort, HeapSort, QuickSort]\n",
-        "scenery = [reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -662,8 +662,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [MergeSort, HeapSort]\n",
-        "scenery = [reversed_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [reversed_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -677,7 +677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -704,8 +704,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [BubbleSort, InsertionSort, SelectionSort, MergeSort, HeapSort, QuickSort]\n",
-        "scenery = [random_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -747,8 +747,8 @@
         "sizes = [i*jump for i in range(1, samples+1)]\n",
         "reps = 10\n",
         "algorithm = [MergeSort, HeapSort, QuickSort]\n",
-        "scenery = [random_list]\n",
-        "MachineCall(sizes, reps, algorithm, scenery)"
+        "scenario = [random_list]\n",
+        "MachineCall(sizes, reps, algorithm, scenario)"
       ]
     },
     {
