Test Section Completed

--- a/Tests/tests_MergeSort.ipynb
+++ b/Tests/tests_MergeSort.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "67bf9e58",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a68ae02f",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List: [4, 4, 2, 6, 7, 8, 6, 9, 2, 10]\n",
-      "Sorted List: [2, 2, 4, 4, 6, 6, 7, 8, 9, 10]\n",
+      "List: [10, 8, 7, 10, 4, 2, 9, 10, 3, 5]\n",
+      "Sorted List: [2, 3, 4, 5, 7, 8, 9, 10, 10, 10]\n",
       "\n",
       "List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "Sorted List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -75,6 +75,40 @@
     "print(f\"List: {reversedList}\")\n",
     "MergeSort(reversedList)\n",
     "print(f\"Sorted List: {reversedList}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "668ccb70",
+   "metadata": {},
+   "source": [
+    "# Algorithm Correctness Verification\n",
+    "We show that the algorithm works correctly (sorting) compared to a well-known method within lists: `list.sort()`. We order `m=1000000` different random lists (of size `n=10`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "89ee6c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 1000000\n",
+    "n = 10\n",
+    "test = 0\n",
+    "for _ in range(m):\n",
+    "  A = random_list(n)\n",
+    "  B = list(A)\n",
+    "  test += MergeSort(B) == A.sort()\n",
+    "print(test == m) #If the test is True, the MergeSort function works correctly."
    ]
   }
  ],
