--- a/Tests/tests_QuickSort.ipynb
+++ b/Tests/tests_QuickSort.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "67bf9e58",
    "metadata": {},
    "outputs": [],
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List: [3, 4, 9, 3, 6, 7, 10, 3, 1, 4]\n",
-      "Sorted List: [1, 3, 3, 3, 4, 4, 6, 7, 9, 10]\n",
+      "List: [3, 1, 1, 4, 10, 8, 6, 2, 2, 7]\n",
+      "Sorted List: [1, 1, 2, 2, 3, 4, 6, 7, 8, 10]\n",
       "\n",
       "List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "Sorted List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -75,6 +75,40 @@
     "print(f\"List: {reversedList}\")\n",
     "QuickSort(reversedList, 0, n-1)\n",
     "print(f\"Sorted List: {reversedList}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aef1760d",
+   "metadata": {},
+   "source": [
+    "# Algorithm Correctness Verification\n",
+    "We show that the algorithm works correctly (sorting) compared to a well-known method within lists: `list.sort()`. We order `m=1000000` different random lists (of size `n=10`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "91609d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 1000000\n",
+    "n = 10\n",
+    "test = 0\n",
+    "for _ in range(m):\n",
+    "  A = random_list(n)\n",
+    "  B = list(A)\n",
+    "  test += QuickSort(B, 0, n-1) == A.sort()\n",
+    "print(test == m) #If the test is True, the QuickSort function works correctly."
    ]
   }
  ],
