--- a/Tests/tests_BubbleSort.ipynb
+++ b/Tests/tests_BubbleSort.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a68ae02f",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List: [7, 9, 1, 3, 5, 10, 3, 5, 3, 8]\n",
-      "Sorted List: [1, 3, 3, 3, 5, 5, 7, 8, 9, 10]\n",
+      "List: [2, 5, 5, 7, 3, 3, 2, 2, 9, 7]\n",
+      "Sorted List: [2, 2, 2, 3, 3, 5, 5, 7, 7, 9]\n",
       "\n",
       "List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "Sorted List: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -75,6 +75,40 @@
     "print(f\"List: {reversedList}\")\n",
     "BubbleSort(reversedList)\n",
     "print(f\"Sorted List: {reversedList}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1222d92f",
+   "metadata": {},
+   "source": [
+    "# Algorithm Correctness Verification\n",
+    "We show that the algorithm works correctly (sorting) compared to a well-known method within lists: `list.sort()`. We order `m=1000000` different random lists (of size `n=10`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2ad1d33c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 1000000\n",
+    "n = 10\n",
+    "test = 0\n",
+    "for _ in range(m):\n",
+    "  A = random_list(n)\n",
+    "  B = list(A)\n",
+    "  test += BubbleSort(B) == A.sort()\n",
+    "print(test == m) #If the test is True, the BubbleSort function works correctly."
    ]
   }
  ],
