--- a/7 ComplexityMachine/ComplexityMachine.ipynb
+++ b/7 ComplexityMachine/ComplexityMachine.ipynb
@@ -26,7 +26,7 @@
       "metadata": {},
       "source": [
         "## Importing Blocks\n",
-        "Let's import algorithms `BubbleSort`, `InsertionSort`, `SelectionSort`, `MergeSort`, `HeapSort`, `QuickSor` and functions in `list_maker.py`."
+        "Let's import algorithms `BubbleSort`, `InsertionSort`, `SelectionSort`, `MergeSort`, `HeapSort`, `QuickSort` and functions in `list_maker.py`."
       ]
     },
     {
