--- a/7 ComplexityMachine/ComplexityMachine.ipynb
+++ b/7 ComplexityMachine/ComplexityMachine.ipynb
@@ -58,19 +58,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Time Execution Calculator\n",
+        "## Execution Time Calculator\n",
         "Calculates the execution time of an algorithm."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 1,
       "metadata": {
         "id": "wQ0yMNCTWfYl"
       },
       "outputs": [],
       "source": [
-        "def TimeExecution(fun, *args):\n",
+        "def ExecutionTime(fun, *args):\n",
         "  start = time.time()\n",
         "  fun(*args)\n",
         "  end = time.time()\n",
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -100,9 +100,9 @@
         "      for i, algo in enumerate(algorithm):\n",
         "        list_copy = list_sample.copy()\n",
         "        if algo == QuickSort:\n",
-        "          current_time[i] += TimeExecution(QuickSort, list_copy, 0, n-1)\n",
+        "          current_time[i] += ExecutionTime(QuickSort, list_copy, 0, n-1)\n",
         "          continue\n",
-        "        current_time[i] += TimeExecution(algo, list_copy)\n",
+        "        current_time[i] += ExecutionTime(algo, list_copy)\n",
         "    for i, t in enumerate(current_time):\n",
         "      total_times[i].append(t/reps)\n",
         "  return total_times"
@@ -113,12 +113,12 @@
       "metadata": {},
       "source": [
         "## Complexity Machine\n",
-        "Obtains the experimental times of the BigOh complexity of the algorithms."
+        "Obtains the experimental execution time of a single algorithm."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -130,9 +130,9 @@
         "      for i, lists in enumerate(scenario):\n",
         "        list_sample = lists(n)\n",
         "        if algorithm == QuickSort:\n",
-        "          current_time[i] += TimeExecution(QuickSort, list_sample, 0, n-1)\n",
+        "          current_time[i] += ExecutionTime(QuickSort, list_sample, 0, n-1)\n",
         "          continue\n",
-        "        current_time[i] += TimeExecution(algorithm, list_sample)\n",
+        "        current_time[i] += ExecutionTime(algorithm, list_sample)\n",
         "    for i, t in enumerate(current_time):\n",
         "      total_times[i].append(t/reps)\n",
         "  return total_times"
