--- a/0 ListsMaker/lists_maker.ipynb
+++ b/0 ListsMaker/lists_maker.ipynb
@@ -6,7 +6,7 @@
         "id": "yS8TzGAvMMbl"
       },
       "source": [
-        "# Imported Libraries"
+        "# **Imported Libraries**"
       ]
     },
     {
@@ -26,7 +26,7 @@
         "id": "8ajh-4QiMTRr"
       },
       "source": [
-        "# Random List"
+        "# **Random List**"
       ]
     },
     {
@@ -47,7 +47,7 @@
         "id": "QmwSE4opM8h5"
       },
       "source": [
-        "# Sorted List"
+        "# **Sorted List**"
       ]
     },
     {
@@ -68,7 +68,7 @@
         "id": "OWNt1akjNSnc"
       },
       "source": [
-        "# Reversed List"
+        "# **Reversed List**"
       ]
     },
     {
