--- a/1 BubbleSort/BubbleSort.ipynb
+++ b/1 BubbleSort/BubbleSort.ipynb
@@ -5,7 +5,7 @@
    "id": "5522b887",
    "metadata": {},
    "source": [
-    "## Bubble Sort Algorithm"
+    "## **Bubble Sort Algorithm**"
    ]
   },
   {
