--- a/4 MergeSort/MergeSort.ipynb
+++ b/4 MergeSort/MergeSort.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Additional Libraries"
+        "## **Additional Libraries**"
       ]
     },
     {
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Merge Sort Algorithm"
+        "## **Merge Sort Algorithm**"
       ]
     },
     {
