--- a/5 HeapSort/HeapSort.ipynb
+++ b/5 HeapSort/HeapSort.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Max-Heapify Algorithm"
+        "## **Max-Heapify Algorithm**"
       ]
     },
     {
@@ -32,7 +32,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Heap Sort Algorithm"
+        "## **Heap Sort Algorithm**"
       ]
     },
     {
