--- a/7 ComplexityMachine/ComplexityMachine.ipynb
+++ b/7 ComplexityMachine/ComplexityMachine.ipynb
@@ -4,8 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Construction of the Machine\n",
-        "## Additional Libraries"
+        "# **Construction of the Machine**\n",
+        "## **Additional Libraries**"
       ]
     },
     {
@@ -25,7 +25,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Importing Blocks\n",
+        "## **Importing Blocks**\n",
         "Let's import algorithms `BubbleSort`, `InsertionSort`, `SelectionSort`, `MergeSort`, `HeapSort`, `QuickSort` and functions in `list_maker.py`."
       ]
     },
@@ -58,7 +58,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Execution Time Calculator\n",
+        "## **Execution Time Calculator**\n",
         "Calculates the execution time of an algorithm."
       ]
     },
@@ -81,7 +81,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Comparison Machine\n",
+        "## **Comparison Machine**\n",
         "Obtains the experimental comparison times between the different algorithms."
       ]
     },
@@ -112,7 +112,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Complexity Machine\n",
+        "## **Complexity Machine**\n",
         "Obtains the experimental execution time of a single algorithm."
       ]
     },
@@ -142,8 +142,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Experiment Block\n",
-        "## Comparison Graph\n",
+        "# **Experiment Block**\n",
+        "## **Comparison Graph**\n",
         "Line plot of the times obtained on the Comparison Machine."
       ]
     },
@@ -179,7 +179,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Complexity Graph\n",
+        "## **Complexity Graph**\n",
         "Line plot of the times obtained on the Complexity Machine."
       ]
     },
@@ -216,7 +216,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Machine Call\n",
+        "## **Machine Call**\n",
         "Chooses between both machines."
       ]
     },
@@ -243,7 +243,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## BubbleSort BigOh Visualization"
+        "## **BubbleSort BigOh Visualization**"
       ]
     },
     {
@@ -283,12 +283,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "- The best scenario (sorted list) exhibits quadratic growth. This scenario never executes the conditional block, although the iterative part continues to be read.\n",
         "- The worst scenario (descending sorted list) exhibits quadratic growth. This scenario always executes the conditional block while the iterative part continues to be read.\n",
         "- The average scenario (random list) exhibits quadratic growth. This scenario combines the characteristics of the other two scenarios.\n",
         "\n",
-        "## InsertionSort BigOh Visualization"
+        "## **InsertionSort BigOh Visualization**"
       ]
     },
     {
@@ -328,12 +328,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "- The best scenario (sorted list) exhibits linear growth. This scenario never executes the conditional block, which breaks the iterative cycle.\n",
         "- The worst scenario (descending sorted list) exhibits quadratic growth. This scenario always executes the conditional block, so the iterative part continues.\n",
         "- The average scenario (random list) exhibits quadratic growth. This scenario combines the characteristics of the other two.\n",
         "\n",
-        "## SelectionSort BigOh Visualization"
+        "## **SelectionSort BigOh Visualization**"
       ]
     },
     {
@@ -373,9 +373,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "The three scenarios show quadratic behavior without relevant differences.\n",
-        "## MergeSort BigOh Visualization"
+        "## **MergeSort BigOh Visualization**"
       ]
     },
     {
@@ -415,9 +415,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "The three scenarios show a smooth increasing behavior, as does $n\\lg n$. There is no relevant difference between the three scenarios.\n",
-        "## HeapSort BigOh Visualization"
+        "## **HeapSort BigOh Visualization**"
       ]
     },
     {
@@ -457,9 +457,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "The three scenarios show a smooth increasing behavior, as does $n\\lg n$. There is no relevant difference between the three scenarios.\n",
-        "## QuickSort BigOh Visualization"
+        "## **QuickSort BigOh Visualization**"
       ]
     },
     {
@@ -499,10 +499,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "- The best scenario (random list) shows very smooth growth, as does $n \\lg n$.\n",
         "- The worst scenario (sorted list and descending sorted list) shows quadratic growth, due to how the pivot was assigned (we'll see how to improve this assignment in another work).\n",
-        "## Comparing Algorithms with Sorted Lists"
+        "## **Comparing Algorithms with Sorted Lists**"
       ]
     },
     {
@@ -542,9 +542,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "There's a significant difference between quadratic complexity algorithms (`QuickSort`, `BubbleSort`, `Selection`) and those with lower complexity. Note that the `QuickSort` algorithm is in its worst-case scenario, which is why its runtime is so long, even longer than `BubbleSort` algorithm.\n",
-        "## A Closer Look\n",
+        "## **A Closer Look**\n",
         "Here's a closer look at the `InsertionSort`, `MergeSort`, and `HeapSort` algorithms."
       ]
     },
@@ -585,9 +585,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "The linear complexity of `InsertionSort` is evident, being the fastest for this scenario (complexity $n$). The other two algorithms have complexity $n \\lg n$. `MergeSort` is faster than `HeapSort`.\n",
-        "## Comparing Algorithms with Reversed Sorted Lists"
+        "## **Comparing Algorithms with Reversed Sorted Lists**"
       ]
     },
     {
@@ -627,9 +627,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "There's a significant difference between quadratic complexity algorithms (`BubbleSort`, `InsertionSort`, `QuickSort`, `SelectionSort`) and those with lower complexity. The algorithm `BubbleSort` has the longest execution time. Note that the `QuickSort` algorithm is in its worst-case scenario, which is why its runtime is so long.\n",
-        "## A Closer Look\n",
+        "## **A Closer Look**\n",
         "Here's a closer look at the `MergeSort` and `HeapSort` algorithms."
       ]
     },
@@ -670,9 +670,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "Both algorithms have complexity $n \\lg n$. `MergeSort` is faster than `HeapSort`.\n",
-        "## Comparing Algorithms with Random Lists"
+        "## **Comparing Algorithms with Random Lists**"
       ]
     },
     {
@@ -712,9 +712,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "There's a significant difference between quadratic complexity algorithms (`BubbleSort`, `InsertionSort`, `SelectionSort`) and those with lower complexity. The algorithm `BubbleSort` has the longest execution time.\n",
-        "## A Closer Look\n",
+        "## **A Closer Look**\n",
         "Here's a closer look at the `MergeSort`, `HeapSort`, and `QuickSort` algorithms."
       ]
     },
@@ -755,9 +755,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis\n",
+        "### **Analysis**\n",
         "All algorithms have complexity $n \\lg n$. The algorithms `QuickSort` and `MergeSort` are the fastest ones.\n",
-        "# Conclusions\n",
+        "# **Conclusions**\n",
         "In this study, we experimentally validated the theoretical time complexities of various sorting algorithms. We also compared their performance across different input scenarios. Since data in real-world applications is typically unordered, the average-case performance is often the most relevant. Under these conditions, QuickSort and MergeSort consistently emerged as the fastest algorithms, achieving an average execution time of approximately 0.02 seconds for lists containing 10,000 elements.\n",
         "\n",
         "On the other hand, BubbleSort, InsertionSort, and SelectionSort demonstrated significantly slower runtimes in all test cases, aligning with their known quadratic time complexity. HeapSort, while slightly slower than QuickSort and MergeSort, still maintained excellent average performance and is widely appreciated not only as a sorting algorithm but also as a foundational data structure for implementing efficient priority queues—an aspect we plan to explore further in future work."
