--- a/Tests/test_lists_maker.ipynb
+++ b/Tests/test_lists_maker.ipynb
@@ -5,7 +5,7 @@
    "id": "7f52bb3e",
    "metadata": {},
    "source": [
-    "# Importing Block\n",
+    "# **Importing Block**\n",
     "Let's import functions in `lists_maker.py`"
    ]
   },
@@ -30,7 +30,7 @@
    "id": "ab0fd54e",
    "metadata": {},
    "source": [
-    "# Testing Block\n",
+    "# **Testing Block**\n",
     "Let's test `random_list`, `sorted_list` and `reversed_list` with `n=10`."
    ]
   },
