--- a/Tests/tests_HeapSort.ipynb
+++ b/Tests/tests_HeapSort.ipynb
@@ -5,7 +5,7 @@
    "id": "0acdaf0d",
    "metadata": {},
    "source": [
-    "# Importing block\n",
+    "# **Importing block**\n",
     "Let's import algorithm `HeapSort` and functions in `lists_maker.py`."
    ]
   },
@@ -32,7 +32,7 @@
    "id": "be0a7513",
    "metadata": {},
    "source": [
-    "# Testing Block\n",
+    "# **Testing Block**\n",
     "Let's test `HeapSort` with lists of length `n=10`."
    ]
   },
@@ -82,7 +82,7 @@
    "id": "19cbb086",
    "metadata": {},
    "source": [
-    "# Algorithm Correctness Verification\n",
+    "# **Algorithm Correctness Verification**\n",
     "We show that the algorithm works correctly (sorting) compared to a well-known method within lists: `list.sort()`. We order `m=1000000` different random lists (of size `n=10`)."
    ]
   },
