--- a/2 InsertionSort/InsertionSort.ipynb
+++ b/2 InsertionSort/InsertionSort.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Insertion Sort Algorithm"
+        "## **Insertion Sort Algorithm**"
       ]
     },
     {
