--- a/3 SelectionSort/SelectionSort.ipynb
+++ b/3 SelectionSort/SelectionSort.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Selection Sort Algorithm"
+        "## **Selection Sort Algorithm**"
       ]
     },
     {
