--- a/6 QuickSort/QuickSort.ipynb
+++ b/6 QuickSort/QuickSort.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Partition Algorithm"
+        "## **Partition Algorithm**"
       ]
     },
     {
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Quick Sort Algorithm"
+        "## **Quick Sort Algorithm**"
       ]
     },
     {
