--- a/Tests/test_lists_maker.ipynb
+++ b/Tests/test_lists_maker.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "38803c7b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "# Add the Lists Maker directory to the path\n",
+    "# Add relative paths to module folders\n",
     "sys.path.append(os.path.abspath(\"../0 ListsMaker\"))\n",
     "\n",
     "from lists_maker import random_list, sorted_list, reversed_list"
