--- a/2 Algorithm Design and Experimentation/sorting_algorithms.ipynb
+++ b/2 Algorithm Design and Experimentation/sorting_algorithms.ipynb
@@ -1209,7 +1209,7 @@
     "\n",
     "However, in real-world situations, data is typically unordered, making **random lists the most common scenario**. In this context, **Quick Sort and Merge Sort emerged as the fastest algorithms on average**. Quick Sort, in particular, demonstrated superior average-case performance, making it a popular choice in many standard libraries and applications.\n",
     "\n",
-    "It is important to note, though, that **Quick Sort's performance can degrade significantly in its worst-case scenarios** (such as already sorted or reverse sorted lists). Addressing these worst cases requires algorithmic improvements, which will be explored in a future project.\n",
+    "It is important to note, though, that **Quick Sort's performance can degrade significantly in its worst-case scenarios** (such as already sorted or reverse sorted lists). Addressing these worst cases is explored in my other repository cited in the README file.\n",
     "\n",
     "In summary, while Merge Sort and Heap Sort offer consistent speed across all scenarios, Quick Sort stands out for its average-case efficiency on random data, provided its worst-case behavior is properly managed."
    ]
